# sentio_lite

./: .gitignore  10_SYMBOL_MIGRATION_COMPLETE.md  BUG_REPORT_LIMITED_TRADING.md  BUG_REPORT_MULTIDAY_DEGRADATION.md  BUG_REPORT_MULTI_DAY_TESTING.md  BUG_REPORT_OPTUNA_OPTIMIZATION_FAILURE.md  BUG_REPORT_PROBABILITY_SCALING.md  BUG_REPORT_SIGOR_PERFORMANCE.md  BUG_REPORT_TRADE_BLOCKAGE_DAYS_4_5.md  BUILD_SUCCESS.md  CMakeLists.txt  CURRENT_STATUS.md  DASHBOARD_SETUP_COMPLETE.md  DESIGN_PRINCIPLES.md  DETERMINISTIC_ENGINE_COMPARISON.md  DOWNLOAD_DATA.md  Dockerfile  ENHANCED_FEATURES.md  ENHANCEMENT_COMPLETE.md  EXPERT_FIXES_IMPLEMENTED.md  EXPERT_FIXES_SUMMARY.md  FINAL_RESULTS.md  HANDOVER_KAFKA.md  High-level.md  INTEGRATION_PLAN.md  KAFKA_PRODUCER_SUMMARY.md  MIGRATION_STATUS.md  MOCK_LIVE_REDESIGN_COMPLETE.md  ONLINE_TRADER_FINDINGS.md  OPTUNA_IMPLEMENTATION_COMPLETE.md  OPTUNA_OPTIMIZATION_GUIDE.md  OPTUNA_WORKFLOW.md  PROJECT_DESIGN_RULES.md  PROJECT_RULES.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.1.md  REQUIREMENTS_OUTSMART_BRUTE_FORCE.md  ROTATION_ANALYSIS.md  ROTATION_TEST_RESULTS.md  (+17 more)
Code review guidance - Claude_files/: 2225-9715d6f84b41ae2d.js  a0a67118cce65b5c.css  a3e0c0496a6e981d.css  lupk8zyo  main-app-cbd6d8b9acd5ab0a.js  not-found-29c40a5b1497eec2.js  webpack-fd003bf8ca45dd52.js
bugreport.md_files/: code
bugreport2.md_files/: cb=gapi.loaded_0  gtm.js  m=_b  rs=AA2YrTtqB8vy5I00yeogLpbOMJPRs7jOZw
config/: __init__.py  mega_doc_config.py  sigor_params.json.backup  symbols.conf  trading_params.json.baseline_pos_sizing
config/production_winners/: CURRENT_PRODUCTION  INDEX.md
docker/: README.md  docker-compose.polygon.yml  docker-compose.sidecar.yml  entrypoint.sh
docs/: ARCHITECTURE_CLARIFICATION.md  AUTOMATED_TRADING_SETUP_GUIDE.md  AWR_INTEGRATION_REQUIREMENTS.md  BATCH_TESTING_GUIDE.md  BUILD_COMPLETE.md  CLI_GUIDE.md  COMMIT_NOTES_2025-10-25_SIGOR_RESILIENCE.md  DEPLOYMENT_READY.md  EXPERT_FEEDBACK_ANALYSIS.md  FEATURE_ENGINE_COMPARISON_CRITICAL.md  FINAL_STATUS_NO_TRADES_BUG.md  LIVE_TRADING_SELF_SUFFICIENCY.md  LOW_MRD_DETAILED_ANALYSIS_REPORT.md  MULTI_SYMBOL_ROTATION_DETAILED_DESIGN.md  ONLINE_TRADER_README.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STATUS.md  PROPOSED_DETECTORS_ANALYSIS.md  QUICKSTART.md  REQ_0.5_MRD_TARGET.md  ROTATION_TRADING_SYSTEM_COMPLETE.md  SESSION_SUMMARY_ROTATION_TRADING_READY.md  SIGOR_LIVE_TRADING_GUIDE.md  TESTING_GUIDE.md  V2_REDESIGN_EXECUTIVE_SUMMARY.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_GUIDE.md  WARMUP_MODE_EXPERIMENT.md  ZMQ_VALIDATION_REPORT.md
examples/: alpaca_cost_demo.cpp
exceptions/: __init__.py  mega_doc_exceptions.py
include/core/: bar.h  bar_id_utils.h  math_utils.h  types.h
megadocs/: BUG_REPORT_NO_TRADES_DESPITE_SIGNALS_MEGA.md  BUG_REPORT_NO_TRADES_EXECUTED.md  BUG_REPORT_NO_TRADES_EXECUTED_MEGA.md  BUG_REPORT_NO_TRADES_EXECUTED_MEGA_MEGA.md  BUG_REPORT_NO_TRADES_PERSIST_AFTER_FIXES_MEGA.md  DESIGN_REVIEW_MEGA.md  EXPERT_FEEDBACK_ANALYSIS_MEGA.md  EXPERT_FEEDBACK_ANALYSIS_MEGA_MEGA.md  EXPERT_FEEDBACK_ANALYSIS_MEGA_MEGA_MEGA.md  FEATURE_ENGINE_COMPARISON_CRITICAL_MEGA.md  FINAL_STATUS_NO_TRADES_BUG_MEGA.md  LAUNCH_SCRIPT_SELF_SUFFICIENCY_REVIEW_MEGA.md  MARS_REGIME_DETECTION_ISSUE_MEGADOC.md  MOCK_TRADING_INFRASTRUCTURE.md  MRD_IMPROVEMENT_REQUIREMENTS_MEGA.md  MRD_OPTIMIZATION_CRITICAL_MODULES_MEGA.md  PERFORMANCE_OPTIMIZATION_REQUIREMENTS_MEGA.md
repositories/: __init__.py  file_repository.py
scripts/: DEVELOPMENT_PRINCIPLES.md  README.md  alpaca_order_client.py  alpaca_websocket_bridge.py  alpaca_websocket_bridge_rotation.py  baseline_evaluation.py  compare_baseline_vs_vwap.sh  compare_position_sizing.sh  compare_warmup_modes.sh  comprehensive_warmup.sh  demo_warmup_modes.sh  download_10_symbols.sh  download_12_symbols.sh  download_14_symbols.sh  download_6_symbols.sh  download_6_symbols_sentio.sh  download_and_prepare_6_symbols.sh  evaluate_config.py  fetch_today_bars.py  launch_live.sh  launch_mock_live.sh  launch_rotation_trading.sh  launch_sigor_live.sh  launch_trading.sh  mocklive_resilience_test.sh  morning_prep.py  optimize_donchian.sh  optimize_donchian_fast.sh  optimize_for_tomorrow.sh  optimize_position_sizing.py  optimize_sigor_combined.py  optimize_sigor_weights.py  optimize_sigor_weights_optuna.py  optimize_sigor_windows.py  optimize_with_validation.py  polygon_websocket_bridge_rotation.py  polygon_websocket_bridge_rotation.py.backup  professional_trading_dashboard.py  replay_fifo_from_results.py  rotation_trading_aggregate_dashboard.py  (+8 more)
services/: __init__.py  mega_document_service.py
src/: main.cpp  test_sigor.cpp  test_williams_rsi.cpp
tests/: DETECTOR_EVALUATION_SUMMARY.md  detector_backtest_framework.h  donchian_detector.cpp  donchian_detector.h  rsi2_detector.cpp  rsi2_detector.h  run_all_detector_tests.cpp  squeeze_detector.cpp  squeeze_detector.h  test_donchian_breakout.cpp  test_rsi2_pullback.cpp  test_squeeze_expansion.cpp  test_vwap_bands_reversion.cpp  vwap_bands_detector.cpp  vwap_bands_detector.h
tools/: README.md  ab_test_runner.sh  adaptive_optuna.py  align_data_to_market_open.py  auto_mega_doc.sh  backtest.py  check_alpaca_status.py  com.onlinetrader.autostart.plist  compare_mrb_calculations.py  compare_strategies.py  compare_visualizations.py  cpp_analyzer.py  cpp_analyzer_full_report.txt  cpp_analyzer_full_report_CRITICAL_FALLBACKS.txt  cpp_analyzer_review.md  create_mega_document.py  data_downloader.py  debug_trade_generation.cpp  export_catboost_dataset.cpp  extract_session_data.py  generate_leveraged_data.py  generate_leveraged_etf_data.py  generate_regime_test_data.py  generate_regime_test_data_mars.py  generate_sigor_dashboard.sh  generate_spy_leveraged_3x.py  generate_spy_leveraged_data.py  hourly_intraday_optuna.py  hourly_optuna_relaunch.sh  install_launchd.sh  kafka_sidecar.py  launch_mock_trading_session.py  market_data_manager.py  midday_optuna_relaunch.sh  mock_alpaca_server.py  monitor_rotation_trading.sh  monitor_sigor_live.sh  monitor_trading.sh  optimize_warmup.py  optuna_5day_search.py  (+39 more)
(+44 files in other folders)
